<resources>
    <string name="app_name">TaskApp</string>

    <!-- Status Task-->
    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>


    <!--   Generic-->
    <string name="text_title_warning">Atenção</string>
    <string name="text_button_warning">Entendi</string>
    <string name="email_empty">Preencha seu e-mail</string>
    <string name="email_text">E-mail</string>
    <string name="password_text">Senha</string>
    <string name="password_empty">Preencha sua senha</string>
    <string name="email_edit_hint">Informe seu e-mail</string>
    <string name="password_edit_hint">Informe sua senha</string>
    <string name="error_generic">Ocorreu um erro, tente novamente</string>
    <string name="text_list_task_empty">Nenhuma tarefa cadastrada</string>
    <string name="text_load_list_task">Aguarde, carregando…</string>
    <string name="text_delete_success_task">Tarefa removida com sucesso</string>
    <string name="text_button_dialog_confirm_logout">Confirmar</string>
    <string name="text_title_dialog_delete">Deseja remover esta tarefa?</string>
    <string name="text_message_dialog_delete">Aperte em confirmar para remover esta tarefa</string>


    <!--    login fragment-->
    <string name="button_text_login_fragment">Login</string>
    <string name="button_text_register_login_fragment">Criar conta</string>
    <string name="button_text_register_recover_fragment">Recuperar conta</string>

    <!--    Register Fragment-->
    <string name="email_empty_register_fragment">Preencha um e-mail válido</string>
    <string name="password_empty_register_fragment">Preencha uma senha</string>
    <string name="button_text_register_fragment">Criar conta</string>
    <string name="text_title_toolbar_register_fragment">Criar conta</string>
    <string name="text_button_toolbar_register_fragment">Enviar</string>

    <!--    Recover account fragment-->
    <string name="text_info_recover_account_fragment">Informe seu e-mail para receber \num link para alteração da senha</string>
    <string name="text_title_toolbar_recover_account_fragment">Recuperar conta</string>
    <string name="text_button_toolbar_recover_account_fragment">Enviar</string>
    <string name="text_message_toolbar_recover_account_fragment">Um link foi enviado para seu e-mail</string>

    <!--    Erros Firebase Auth-->
    <string name="account_not_registered">Informe se e-mail de cadastro para receber \num link para alteração da senha</string>
    <string name="invalida_email_register">Insira um e-mail válido</string>
    <string name="invalid_password_register">Insira uma senha válida</string>">
    <string name="email_in_use">E-mail em uso</string>">
    <string name="strong_password_register">Informe uma senha mais forte</string>

    <!--    Home fragment   -->
    <string name="text_title_dialog_confirm_logout">Deseja sair da sua conta?</string>
    <string name="text_message_dialog_confirm_logout">Aperte em confirmar para sair da sua conta.</string>

    <!--    Form task Fragment-->
    <string name="description_empty_form_task_fragment">Preencha uma descrição</string>
    <string name="text_title_form_task_fragment">Nova tarefa</string>
    <string name="text_description_form_task_fragment">Descrição</string>
    <string name="hint_edit_description_form_task_fragment">Ex: Lavar roupa</string>
    <string name="text_status_form_task_fragment">Ex: Lavar roupa</string>
    <string name="btn_text_form_task_fragment">Salvar</string>
    <string name="text_save_success_frm_task_fragment">Tarefa salva com sucesso</string>
    <string name="text_toolbar_update_success_frm_task_fragment">Editando tarefa...</string>
</resources>